--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.2.0",
     "react-scroll": "^1.9.3",
+    "rsuite": "^5.78.1",
     "sass": "^1.85.1",
     "zustand": "^5.0.3"
   },
